# fallout1-ce

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
.github/workflows/: ci-build.yml  release.yml
cmake/toolchain/: Linux32.cmake
os/android/: .gitignore  build.gradle  settings.gradle
os/android/app/: .gitignore  build.gradle
os/android/app/src/debug/res/values/: strings.xml
os/android/app/src/main/: AndroidManifest.xml
os/android/app/src/main/java/com/alexbatalov/falloutce/: FileUtils.java  ImportActivity.java  MainActivity.java
os/android/app/src/main/res/values/: strings.xml
os/android/gradle/wrapper/: gradle-wrapper.properties
os/ios/: Info.plist  LaunchScreen.storyboard
os/macos/: Info.plist  fallout-ce.icns
os/wasm/: pre.js  shell.htm
os/windows/: fallout-ce.rc
src/: audio_engine.cc  audio_engine.h  endian.hpp  fps_limiter.cc  fps_limiter.h  movie_lib.cc  movie_lib.h  platform_compat.cc  platform_compat.h  pointer_registry.cc  pointer_registry.h  sound_decoder.cc  sound_decoder.h
src/game/: actions.cc  actions.h  amutex.cc  amutex.h  anim.cc  anim.h  art.cc  art.h  automap.cc  automap.h  bmpdlog.cc  bmpdlog.h  cache.cc  cache.h  combat.cc  combat.h  combat_defs.h  combatai.cc  combatai.h  config.cc  config.h  counter.cc  counter.h  credits.cc  credits.h  critter.cc  critter.h  cycle.cc  cycle.h  display.cc  display.h  editor.cc  editor.h  elevator.cc  elevator.h  endgame.cc  endgame.h  fontmgr.cc  fontmgr.h  game.cc  (+100 more)
src/int/: audio.cc  audio.h  audiof.cc  audiof.h  datafile.cc  datafile.h  dialog.cc  dialog.h  export.cc  export.h  intlib.cc  intlib.h  intrpret.cc  intrpret.h  memdbg.cc  memdbg.h  mousemgr.cc  mousemgr.h  movie.cc  movie.h  nevs.cc  nevs.h  pcx.cc  pcx.h  region.cc  region.h  share1.cc  share1.h  sound.cc  sound.h  widget.cc  widget.h  window.cc  window.h
src/int/support/: intextra.cc  intextra.h
src/platform/ios/: paths.h  paths.mm
src/plib/assoc/: assoc.cc  assoc.h
src/plib/color/: color.cc  color.h
src/plib/db/: db.cc  db.h  lzss.cc  lzss.h
src/plib/gnw/: button.cc  button.h  debug.cc  debug.h  dxinput.cc  dxinput.h  gamepad.cc  gamepad.hpp  gnw.cc  gnw.h  gnw_types.h  grbuf.cc  grbuf.h  input.cc  input.h  intrface.cc  intrface.h  kb.cc  kb.h  memory.cc  memory.h  mmx.cc  mmx.h  mouse.cc  mouse.h  rect.cc  rect.h  svga.cc  svga.h  svga_types.h  text.cc  text.h  touch.cc  touch.h  vcr.cc  vcr.h  winmain.cc  winmain.h
